--- a/backend/requirements-compat.txt
+++ b/backend/requirements-compat.txt
@@ -1,9 +1,9 @@
-# 兼容旧版本 Python 的依赖文件
+# 兼容旧 Python 版本的依赖文件
 # 适用于 Python 3.6+
 Django==3.2.25
 djangorestframework==3.14.0
 django-cors-headers==3.14.0
 gunicorn==20.1.0
-dj-database-url==0.5.0
+dj-database-url==2.0.0
 psycopg2-binary==2.9.9
 
